Ading keylogging feature with length splicing.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 			</div>
 		</main>
 	</body>
-	<script type="text/javascript" href="app.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </html>
