Mocking up first question.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 </head>
 	<body>
 		<main class="flexCon">
-			<div class="instructions">
-				<p> > ... </p>
+			<div class="load-area">
+				<p class="question">
+					
+				Change Directories <br><br>
+				AKA ____ < path >
+				</p>
+
+				<p class="hidden-code">
+					cd
+				</p>
 			</div>
 		</main>
 	</body>
